fix: Header Logo overflow in Firefox

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,7 @@ body {
 }
 
 .logo {
+    width: -moz-fit-content;
     width: fit-content;
 }
 
